KhanhTran_Chỉnh lại toàn bộ data

--- a/Backend/randomFunc/BoPhanNhanVienrandom.ipynb
+++ b/Backend/randomFunc/BoPhanNhanVienrandom.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,10 +14,10 @@
     "\n",
     "    # Mở file SQL để ghi\n",
     "    with open(sql_file_path, 'w', encoding='utf-8') as sql_file:\n",
-    "        sql_file.write(\"INSERT INTO BoPhan_NhanVien (BP_NV_MaNhanVien, BP_NV_MaChiNhanh, BP_NV_TenBoPhan, BP_NV_ChucVu, BP_NV_Luong) VALUES\\n\")\n",
     "        for index, row in df.iterrows():\n",
+    "            sql_file.write(\"INSERT INTO BoPhan_NhanVien (BP_NV_MaNhanVien, BP_NV_MaChiNhanh, BP_NV_TenBoPhan, BP_NV_ChucVu, BP_NV_Luong) VALUES \")\n",
     "            # Tạo câu lệnh INSERT INTO\n",
-    "            value = f\"('{row['BP_NV_MaNhanVien']}', '{row['BP_NV_MaChiNhanh']}', N'{row['BP_NV_TenBoPhan']}', N'{row['BP_NV_ChucVu']}', '{row['BP_NV_Luong']}'),\\n\"\n",
+    "            value = f\"('{row['BP_NV_MaNhanVien']}', '{row['BP_NV_MaChiNhanh']}', N'{row['BP_NV_TenBoPhan']}', N'{row['BP_NV_ChucVu']}', '{row['BP_NV_Luong']}');\\n\"\n",
     "            # Ghi câu lệnh vào file SQL\n",
     "            sql_file.write(value)\n",
     "\n",
