--- a/Backend/randomFunc/NhanVienrandom.ipynb
+++ b/Backend/randomFunc/NhanVienrandom.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,10 +14,10 @@
     "\n",
     "    # Mở file SQL để ghi\n",
     "    with open(sql_file_path, 'w', encoding='utf-8') as sql_file:\n",
-    "        sql_file.write(\"INSERT INTO NhanVien (NV_MaNhanVien, NV_HoTen, NV_NgaySinh, NV_GioiTinh, NV_NgayVaoLam, NV_NgayNghiViec, NV_DiaChi, NV_SDT, NV_SoNha, NV_TenDuong, NV_TenPhuong, NV_TenQuan, NV_TenThanhPho) VALUES\\n\")\n",
     "        for index, row in df.iterrows():\n",
     "            # Tạo câu lệnh INSERT INTO\n",
-    "            value = f\"('{row['NV_MaNhanVien']}', N'{row['NV_HoTen']}', '{row['NV_NgaySinh']}', N'{row['NV_GioiTinh']}', '{row['NV_NgayVaoLam']}', '{row['NV_NgayNghiViec']}', N'{row['NV_DiaChi']}', '0{row['NV_SDT']}', '{row['NV_SoNha']}', N'{row['NV_TenDuong']}', N'{row['NV_TenPhuong']}', N'{row['NV_TenQuan']}', N'{row['NV_TenThanhPho']}'),\\n\"\n",
+    "            sql_file.write(\"INSERT INTO NhanVien (NV_MaNhanVien, NV_HoTen, NV_NgaySinh, NV_GioiTinh, NV_NgayVaoLam, NV_NgayNghiViec, NV_DiaChi, NV_SDT, NV_SoNha, NV_TenDuong, NV_TenPhuong, NV_TenQuan, NV_TenThanhPho) VALUES \")\n",
+    "            value = f\"('{row['NV_MaNhanVien']}', N'{row['NV_HoTen']}', '{row['NV_NgaySinh']}', N'{row['NV_GioiTinh']}', '{row['NV_NgayVaoLam']}', '{row['NV_NgayNghiViec']}', N'{row['NV_DiaChi']}', '0{row['NV_SDT']}', '{row['NV_SoNha']}', N'{row['NV_TenDuong']}', N'{row['NV_TenPhuong']}', N'{row['NV_TenQuan']}', N'{row['NV_TenThanhPho']}');\\n\"\n",
     "            # Ghi câu lệnh vào file SQL\n",
     "            sql_file.write(value)\n",
     "\n",
