--- a/Backend/randomFunc/TheThanhVienrandom.ipynb
+++ b/Backend/randomFunc/TheThanhVienrandom.ipynb
@@ -14,10 +14,10 @@
     "\n",
     "    # Mở file SQL để ghi\n",
     "    with open(sql_file_path, 'w', encoding='utf-8') as sql_file:\n",
-    "        sql_file.write(\"INSERT INTO TheThanhVien (TTV_MaThe, TTV_NgayTao, TTV_SoNamSuDung, TTV_DiemTichLuy, TTV_TrangThai, TTV_LoaiThe, TTV_SDT_KH, TTV_MaNhanVien) VALUES\\n\")\n",
     "        for index, row in df.iterrows():\n",
+    "            sql_file.write(\"INSERT INTO TheThanhVien (TTV_MaThe, TTV_NgayTao, TTV_SoNamSuDung, TTV_DiemTichLuy, TTV_TrangThai, TTV_LoaiThe, TTV_SDT_KH, TTV_MaNhanVien) VALUES \")\n",
     "            # Tạo câu lệnh INSERT INTO\n",
-    "            value = f\"('{row['TTV_MaThe']}', '{row['TTV_NgayTao']}', '{row['TTV_SoNamSuDung']}', '{row['TTV_DiemTichLuy']}', '{row['TTV_TrangThai']}', '{row['TTV_LoaiThe']}', '0{row['TTV_SDT_KH']}', '{row['TTV_MaNhanVien']}'),\\n\"\n",
+    "            value = f\"('{row['TTV_MaThe']}', '{row['TTV_NgayTao']}', '{row['TTV_SoNamSuDung']}', '{row['TTV_DiemTichLuy']}', '{row['TTV_TrangThai']}', '{row['TTV_LoaiThe']}', '0{row['TTV_SDT_KH']}', '{row['TTV_MaNhanVien']}');\\n\"\n",
     "            # Ghi câu lệnh vào file SQL\n",
     "            sql_file.write(value)\n",
     "\n",
